--- a/configs/config_discriminator_pretrain.yaml
+++ b/configs/config_discriminator_pretrain.yaml
@@ -23,7 +23,7 @@ train:
     dis_reshuffle: True
     dis_gpu_device: 'gpu-0'
     dis_max_len: 50
-    dis_positive_data: '/data/jeicy/data/train/train/10w_train_split.zh'
+    dis_positive_data: '/data/jeicy/data/train/train/10w_train_split.en'
     dis_negative_data: '/data/jeicy/data/generate/10w_negative.en'
     dis_source_data: '/data/jeicy/data/train/train/10w_train_jieba.zh'
     dis_dev_positive_data: '/data/jeicy/data/eval/eval/valid.en-zh_split.en'
