--- a/configs/config_discriminator_pretrain.yaml
+++ b/configs/config_discriminator_pretrain.yaml
@@ -1,6 +1,6 @@
 ---
-src_vocab: '/data/jeicy/data/10w_chinese.vocab'
-dst_vocab: '/data/jeicy/data/10w_english.vocab'
+src_vocab: '/data/jeicy/data/chinese.vocab'
+dst_vocab: '/data/jeicy/data/english.vocab'
 src_vocab_size: 47141
 dst_vocab_size: 36939
 hidden_units: 128
@@ -12,22 +12,22 @@ num_heads: 8
 binding_embedding: False
 train:
     logdir: 'pre.dis.log'
-    dis_src_vocab: '/data/jeicy/data/10w_chinese.vocab.pkl'
-    dis_dst_vocab: '/data/jeicy/data/10w_english.vocab.pkl'
+    dis_src_vocab: '/data/jeicy/data/chinese.vocab.pkl'
+    dis_dst_vocab: '/data/jeicy/data/english.vocab.pkl'
     dis_max_epoches: 2
     dis_dispFreq: 1
     dis_saveFreq: 100
     dis_devFreq: 100
     dis_batch_size: 50
-    dis_saveto: '/data/jeicy/10w/_NMT_GAN/pre_dis'
+    dis_saveto: '/data/jeicy/`_NMT_GAN/pre_dis'
     dis_reshuffle: True
     dis_gpu_device: 'gpu-0'
     dis_max_len: 50
-    dis_positive_data: '/data/jeicy/data/train/train/10w_train_split.en'
-    dis_negative_data: '/data/jeicy/data/generate/10w_negative.en'
-    dis_source_data: '/data/jeicy/data/train/train/10w_train_jieba.zh'
+    dis_positive_data: '/data/jeicy/data/train/train/train_split.en'
+    dis_negative_data: '/data/jeicy/data/generate/negative.en'
+    dis_source_data: '/data/jeicy/data/train/train/train_jieba.zh'
     dis_dev_positive_data: '/data/jeicy/data/eval/eval/valid.en-zh_split.en'
-    dis_dev_negative_data: '/data/jeicy/data/eval/eval/10w-evaluate.output'
+    dis_dev_negative_data: '/data/jeicy/data/eval/eval/evaluate.output'
     dis_dev_source_data: '/data/jeicy/data/eval/eval/valid.en-zh_jieba.zh'
     dis_reload: False
     dis_clip_c: 1.0
