--- a/configs/config_discriminator_pretrain.yaml
+++ b/configs/config_discriminator_pretrain.yaml
@@ -24,7 +24,7 @@ train:
     dis_gpu_device: 'gpu-0'
     dis_max_len: 50
     dis_positive_data: '/data/jeicy/data/train/train/10w_train_split.en'
-    dis_negative_data: '/data/jeicy/data/generate/10w_negative_epoch_188_step_69000.en.en'
+    dis_negative_data: '/data/jeicy/data/generate/10w_negative_epoch_188_step_69000.en'
     dis_source_data: '/data/jeicy/data/train/train/10w_train_jieba.zh'
     dis_dev_positive_data: '/data/jeicy/data/eval/eval/valid.en-zh_split.en'
     dis_dev_negative_data: '/data/jeicy/data/eval/eval/10w-evaluate.output'
