--- a/configs/config_discriminator_pretrain.yaml
+++ b/configs/config_discriminator_pretrain.yaml
@@ -1,6 +1,6 @@
 ---
-src_vocab: '/data/jeicy/data/300w_chinese.vocab'
-dst_vocab: '/data/jeicy/data/300w_english.vocab'
+src_vocab: '/data/jeicy/data/100w_chinese.vocab'
+dst_vocab: '/data/jeicy/data/100w_english.vocab'
 src_vocab_size: 40000
 dst_vocab_size: 40000
 hidden_units: 128
@@ -12,20 +12,20 @@ num_heads: 8
 binding_embedding: False
 train:
     logdir: 'pre.dis.log'
-    dis_src_vocab: '/data/jeicy/data/300w_chinese.vocab.pkl'
-    dis_dst_vocab: '/data/jeicy/data/300w_english.vocab.pkl'
+    dis_src_vocab: '/data/jeicy/data/100w_chinese.vocab.pkl'
+    dis_dst_vocab: '/data/jeicy/data/100w_english.vocab.pkl'
     dis_max_epoches: 2
     dis_dispFreq: 1
     dis_saveFreq: 100
     dis_devFreq: 100
     dis_batch_size: 50
-    dis_saveto: '/data/jeicy/`_NMT_GAN/pre_dis'
+    dis_saveto: '/data/jeicy/_NMT_GAN/pre.dis.log/discriminator'
     dis_reshuffle: True
     dis_gpu_device: 'gpu-0'
     dis_max_len: 50
-    dis_positive_data: '/data/jeicy/data/train/train/train_split.en'
-    dis_negative_data: '/data/jeicy/data/generate/negative.en'
-    dis_source_data: '/data/jeicy/data/train/train/train_jieba.zh'
+    dis_positive_data: '/data/jeicy/data/train/train/train_split_100w.en'
+    dis_negative_data: '/data/jeicy/data/generate/negative_100w.en'
+    dis_source_data: '/data/jeicy/data/train/train/train_jieba_100w.zh'
     dis_dev_positive_data: '/data/jeicy/data/eval/eval/valid.en-zh_split.en'
     dis_dev_negative_data: '/data/jeicy/data/eval/eval/evaluate.output'
     dis_dev_source_data: '/data/jeicy/data/eval/eval/valid.en-zh_jieba.zh'
