--- a/configs/config_gan_train.yaml
+++ b/configs/config_gan_train.yaml
@@ -69,9 +69,9 @@ discriminator:
     dis_reshuffle: True
     dis_gpu_devices: 'gpu-0'
     dis_max_len: 50
-    dis_positive_data: '/data/jeicy/data/train/train/train_split_100w.en'
-    dis_negative_data: '/data/jeicy/data/generate/negative_100w_epoch_14_step_135000.en'
-    dis_source_data: '/data/jeicy/data/train/train/train_jieba_100w.zh'
+    dis_positive_data: '/data/jeicy/data/gan/dis_positive_data'
+    dis_negative_data: '/data/jeicy/data/gan/dis_negative_data'
+    dis_source_data: '/data/jeicy/data/gan/dis_source_data'
     dis_dev_positive_data: '/data/jeicy/data/eval/eval/valid.en-zh_split.en'
     dis_dev_negative_data: '/data/jeicy/data/eval/eval/evaluate_100w.output'
     dis_dev_source_data: '/data/jeicy/data/eval/eval/valid.en-zh_jieba.zh'
