--- a/configs/config_discriminator_pretrain.yaml
+++ b/configs/config_discriminator_pretrain.yaml
@@ -1,6 +1,6 @@
 ---
-src_vocab: '/data/jeicy/data/ec-sjtu/en.vocab'
-dst_vocab: '/data/jeicy/data/ec-sjtu/zh.vocab'
+src_vocab: '/data/jeicy/data/ec-sjtu/zh.vocab'
+dst_vocab: '/data/jeicy/data/ec-sjtu/en.vocab'
 src_vocab_size: 40000
 dst_vocab_size: 40000
 hidden_units: 128
@@ -12,8 +12,8 @@ num_heads: 8
 binding_embedding: False
 train:
     logdir: 'news.pre.dis.log'
-    dis_src_vocab: '/data/jeicy/data/ec-sjtu/en.vocab.pkl'
-    dis_dst_vocab: '/data/jeicy/data/ec-sjtu/zh.vocab.pkl'
+    dis_src_vocab: '/data/jeicy/data/ec-sjtu/zh.vocab.pkl'
+    dis_dst_vocab: '/data/jeicy/data/ec-sjtu/en.vocab.pkl'
     dis_max_epoches: 2
     dis_dispFreq: 1
     dis_saveFreq: 100
@@ -23,12 +23,12 @@ train:
     dis_reshuffle: True
     dis_gpu_device: 'gpu-0'
     dis_max_len: 50
-    dis_positive_data: '/data/jeicy/data/ec-sjtu/train/NEU_newsdev2017-ref'
+    dis_positive_data: '/data/jeicy/data/ec-sjtu/train/NEU_newsdev2017-src'
     dis_negative_data: '/data/jeicy/data/ec-sjtu/generate/negative_100w_epoch_65_step_430000.en'
-    dis_source_data: '/data/jeicy/data/ec-sjtu/train/NEU_newsdev2017-src'
-    dis_dev_positive_data: '/data/jeicy/data/ec-sjtu/dev/CWMT2017-ec-news-test_jieba.zh'
+    dis_source_data: '/data/jeicy/data/ec-sjtu/train/NEU_newsdev2017-ref'
+    dis_dev_positive_data: '/data/jeicy/data/ec-sjtu/dev/CWMT2017-ec-news-test_split.en'
     dis_dev_negative_data: '/data/jeicy/data/ec-sjtu/dev/evaluate.output'
-    dis_dev_source_data: '/data/jeicy/data/ec-sjtu/dev/CWMT2017-ec-news-test_split.en'
+    dis_dev_source_data: '/data/jeicy/data/ec-sjtu/dev/CWMT2017-ec-news-test_jieba.zh'
     dis_reload: False
     dis_clip_c: 1.0
     dis_dim_word: 128
