change config train

--- a/configs/config_generator_train.yaml
+++ b/configs/config_generator_train.yaml
@@ -1,6 +1,6 @@
 ---
-src_vocab: '/data/jeicy/data/ec-sjtu/zh.vocab'
-dst_vocab: '/data/jeicy/data/ec-sjtu/en.vocab'
+src_vocab: '/data/jeicy/data/ec-sjtu/en.vocab'
+dst_vocab: '/data/jeicy/data/ec-sjtu/zh.vocab'
 src_vocab_size: 40000
 dst_vocab_size: 40000
 hidden_units: 128
@@ -12,9 +12,9 @@ num_heads: 8
 binding_embedding: False
 train:
     devices: '0'
-    src_path: '/data/jeicy/data/ec-sjtu/train/NEU_newsdev2017-ref'
-    dst_path: '/data/jeicy/data/ec-sjtu/train/NEU_newsdev2017-src'
-    tokens_per_batch:  2500
+    src_path: '/data/jeicy/data/ec-sjtu/train/NEU_newsdev2017-src'
+    dst_path: '/data/jeicy/data/ec-sjtu/train/NEU_newsdev2017-ref'
+    tokens_per_batch:  5000
     max_length: 50
     num_epochs: 200
     logdir: 'news.pre.gen.log'
@@ -25,13 +25,13 @@ train:
     learning_rate: 0.00005
     learning_rate_warmup_steps: 4000
     label_smoothing: 0.1
-    batch_size: 50
+    batch_size: 100
     shared_embedding: False
 
 test:
-    src_path: '/data/jeicy/data/ec-sjtu/dev/CWMT2017-ec-news-test_jieba.zh'
-    dst_path: '/data/jeicy/data/ec-sjtu/dev/CWMT2017-ec-news-test_split.en'
-    ori_dst_path: '/data/jeicy/data/ec-sjtu/dev/CWMT2017-ec-news-test_split.en'
+    src_path: '/data/jeicy/data/ec-sjtu/dev/CWMT2017-ec-news-test_split.en'
+    dst_path: '/data/jeicy/data/ec-sjtu/dev/CWMT2017-ec-news-test_jieba.zh'
+    ori_dst_path: '/data/jeicy/data/ec-sjtu/dev/CWMT2017-ec-news-test_jieba.zh'
     output_path: '/data/jeicy/data/ec-sjtu/dev/evaluate.output'
     batch_size: 100
     max_target_length: 200
