--- a/configs/config_discriminator_pretrain.yaml
+++ b/configs/config_discriminator_pretrain.yaml
@@ -23,12 +23,12 @@ train:
     dis_reshuffle: True
     dis_gpu_device: 'gpu-0'
     dis_max_len: 50
-    dis_positive_data: '/data/jeicy/data/ec-sjtu/train/NEU_newsdev2017-src'
+    dis_positive_data: '/data/jeicy/data/ec-sjtu/train/NEU_newsdev2017-ref'
     dis_negative_data: '/data/jeicy/data/ec-sjtu/generate/negative_epoch_3_step_100000.en'
-    dis_source_data: '/data/jeicy/data/ec-sjtu/train/NEU_newsdev2017-ref'
-    dis_dev_positive_data: '/data/jeicy/data/ec-sjtu/dev/CWMT2017-ec-news-test_split.en'
+    dis_source_data: '/data/jeicy/data/ec-sjtu/train/NEU_newsdev2017-src'
+    dis_dev_positive_data: '/data/jeicy/data/ec-sjtu/dev/CWMT2017-ec-news-test_jieba.zh'
     dis_dev_negative_data: '/data/jeicy/data/ec-sjtu/dev/evaluate.output'
-    dis_dev_source_data: '/data/jeicy/data/ec-sjtu/dev/CWMT2017-ec-news-test_jieba.zh'
+    dis_dev_source_data: '/data/jeicy/data/ec-sjtu/dev/CWMT2017-ec-news-test_split.en'
     dis_reload: False
     dis_clip_c: 1.0
     dis_dim_word: 128
